Subida de archivos

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
     <meta name="google-signin-client_id" content="793973581213-5n3p140sthuv14q6s3qgm4qgkurvaufl.apps.googleusercontent.com">
 </head>
 <body>
+    <!-- <img src="http://localhost:3000/imagen/productos/5ec6db50f3ba5b39c0ca4f8b-86.jpg?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c3VhcmlvIjp7InJvbGUiOiJVU0VSX1JPTEUiLCJzdGF0ZSI6dHJ1ZSwiZ29vZ2xlIjpmYWxzZSwiX2lkIjoiNWViYWIyNGU2MDBlMjM0NjVjNTNhMjdlIiwibm9tYnJlIjoiVGVzdCAxNiIsImVtYWlsIjoidGVzdDE2QGdtYWlsLmNvbSIsIl9fdiI6MH0sImlhdCI6MTU5MDQzNTQxOSwiZXhwIjoxNTkwNDc4NjE5fQ.ORd85LlV7XdLMqCFDokTMCo3UaO6boQeR_UMJ3Tcx8w" alt=""> -->
     <div class="g-signin2" data-onsuccess="onSignIn"></div>
     <a href="#" onclick="signOut();">Sign out</a>
     <script>
